# hmsao_l1b_converter

./: .gitignore  README.md  bounds.csv  hmsao_l1b_converter.py  l1b_helpers.py  line_profile_5577.nc  line_profile_6300.nc  sza.py  util_functions.py
photometric_calib/: README.md  brightness_calib.py  lightbox_calib_curve.nc  sav2nc.py  straighten_png.py
secondary_straightening/: bounds.csv  generate_line_profile.py  pyproject.toml
secondary_straightening/src/secondary_straightening.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
secondary_straightening/test/: test_line_profile.py  test_straightening.py
